--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
 </head>
 
 <body>
-
-<div id="container>
-
-<img src="DylanDorsey.jpeg" id="photo">
-
-<div id="name">Dylan Dorsey</div>
-
-<div id="contact-info"> </div>
-<p>Email: name.name@place.com </p>
+<header>
+<p id="name">Dylan Dorsey</p>
+</header>
+<div id="contact-info">
+<a href:"mailto:dylan.dorsey@gmail.com"><p id="email">Email: dylan.dorsey@gmail.com</p>
 <p>Phone: 555-555-5555</p>
-<p>Address: 123 fake street. nowheresville, faketown</p>
+<p>City: Minneapolis, MN</p>
+</div>
 
-<div id="personal-description> </div>
+<div id="Objective">I seek admission to Prime Digital Academy's Full Stack Engineering program as an entry point to the software development industry.
+</div>
 
-
-<div id="experience> </div>
+<div id="experience>
 <h1>PROFESSIONAL EXPERIENCE</h1>
 <h2>BIRCHWOOD CAFÉ</h2>
 <h3>Server (Feb. 2016-present)</h3>
@@ -34,8 +31,13 @@
 <h2>THE BECK GROUP</h2>
 <h3>Project Engineer (Aug. 2013 - Aug. 2014</h3>
 <p>Procure subcontractors and material, review submittals for compliance with contract documents, perform quantity take-off, review billing, coordinate 3D modeling of building systems,  maintain project documents, manage quality control issues</p>
-  
+</div>
+
+<div id="education">
 <h1>EDUCATION</h1>
+<h2>Code Academy</h2>
+<p>Make a Website (Nov. 2017)</p>
+
 <h2>Iowa State University (Ames, IA)</h2>
 <p>BS Construction Engineering</p>
 <p>GPA: 3.41/4.00</p>
@@ -44,37 +46,46 @@
 <h2>Swansea University (Swansea, Wales)</h2>
 <p>Study abroad (Spring 2009)</p>
 
-<h1>VOLUNTEER EXPERIENCE</h1>
+</div>
+
+<div id="volunteer-experience">
+  <h1>VOLUNTEER EXPERIENCE</h1>
 <h2>AMERICORPS</h2>
 <h3>Sept. 2014 - June 2015)</h3>
 <p>Serve as Volunteer Support Coordinator at PRISM, a hub of healing and serving basic needs for participants in basic-needs social services agency</p>
-
+  </div>
+  
+<div id="fellowship">
+  
 <h1>FELLOWSHIP</h1>
 <h2>28th CONGRESS-BUNDESTAG YOUTH EXCHANGE (Konstanz, Germany)</h2>
   <h3>Aug. 2011 - July 2012</h3>
 <p>Serve one year in Germany as “ambassador and young professional”  through congressional  fellowship</p>
 
+  </div>
+<div id="inderdisciplinary-project">
 <h1>INTERDISCIPLINARY PROJECT</h1>
 <h2>SOLAR DECATHLON: EUROPE (Konstanz, Germany)</h2>
   <h3>Oct. 2011 - Jan. 2012</h3>
 <p>Forecast energy use of eco house for international design competition; analyze design changes and update forecast</p>
-
-<div id=skills> </div
+  </div>
+  
+<div id="software-skills">
 <h2>SOFTWARE SKILL AREAS</h2>
 <ul>
 <li>Microsoft Office</li>
 <li>Computer Aided Design</li>
 <li>Project Scheduling</li>
  </ul>
-  
+  </div>
+ 
+<div id="language-skills">
 <h2>LANGUAGES</h2>
 <ul> 
 <li>English (written & spoken)</li>
 <li>German (written & spoken></li>
 </ul>
-
-
 </div>
-
+  </div>
 </body>
 </html>
