Add personal description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 <p>City: Minneapolis, MN</p>
 </div>
 
-<div id="Objective">I seek admission to Prime Digital Academy's Full Stack Engineering program as an entry point to the software development industry.
+<div id="objective">
+                   <h1>OBJECTIVE</H1>
+                   <p>I seek admission to Prime Digital Academy's Full Stack Engineering program as an entry point to the software development industry.</p>
+</div>
+
+<div id="personal-description">
+<h1>Personal Description</H1>
+<p>I am a self-motivated learner, problem-solver, and communicator. I value sustainable solutions that are built upon intentional relationships. I believe that diversity is a foundation of success.</p>
 </div>
 
 <div id="experience>
