Switch id to class

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 
 <body>
 <header>
-<p id="name">Dylan Dorsey</p>
+<h1>Dylan Dorsey</h1>
 <a href:"mailto:dylan.dorsey@gmail.com"><p id="email">Email: dylan.dorsey@gmail.com</p>
 <p>Phone: 651-271-4785</p>
 <p>City: Minneapolis, MN</p>
 </header>
                                                      
-<div id="objective">
+<div class="contentbody">
                    <h1>OBJECTIVE</H1>
                    <p>I seek admission to Prime Digital Academy's Full Stack Engineering program as an entry point to the software development industry.</p>
 </div>
 
-<div id="personal-description">
+<div class="contentbody">
 <h1>Personal Description</H1>
 <p>I am a self-motivated learner, problem-solver, and communicator. I value sustainable solutions that are built upon intentional relationships. I believe that diversity is a foundation of success.</p>
 </div>
 
-<div id="experience>
+<div class="contentbody">
 <h1>PROFESSIONAL EXPERIENCE</h1>
 <h2>BIRCHWOOD CAFÉ</h2>
 <h3>Server (Feb. 2016-present)</h3>
@@ -38,7 +38,7 @@
 <p>Procure subcontractors and material, review submittals for compliance with contract documents, perform quantity take-off, review billing, coordinate 3D modeling of building systems,  maintain project documents, manage quality control issues</p>
 </div>
 
-<div id="education">
+<div class="contentbody">
 <h1>EDUCATION</h1>
 <h2>Code Academy</h2>
 <p>Make a Website (Nov. 2017)</p>
@@ -53,14 +53,15 @@
 
 </div>
 
-<div id="volunteer-experience">
+<div class="contentbody">
   <h1>VOLUNTEER EXPERIENCE</h1>
 <h2>AMERICORPS</h2>
 <h3>Sept. 2014 - June 2015)</h3>
 <p>Serve as Volunteer Support Coordinator at PRISM, a hub of healing and serving basic needs for participants in basic-needs social services agency</p>
   </div>
   
-<div id="fellowship">
+<div 
+                     fellowship">
   
 <h1>FELLOWSHIP</h1>
 <h2>28th CONGRESS-BUNDESTAG YOUTH EXCHANGE (Konstanz, Germany)</h2>
@@ -68,14 +69,14 @@
 <p>Serve one year in Germany as “ambassador and young professional”  through congressional  fellowship</p>
 
   </div>
-<div id="inderdisciplinary-project">
+<div class="contentbody">
 <h1>INTERDISCIPLINARY PROJECT</h1>
 <h2>SOLAR DECATHLON: EUROPE (Konstanz, Germany)</h2>
   <h3>Oct. 2011 - Jan. 2012</h3>
 <p>Forecast energy use of eco house for international design competition; analyze design changes and update forecast</p>
   </div>
   
-<div id="software-skills">
+<div class="contentbody">
 <h2>SOFTWARE SKILL AREAS</h2>
 <ul>
 <li>Microsoft Office</li>
@@ -84,7 +85,7 @@
  </ul>
   </div>
  
-<div id="language-skills">
+<div class="contentbody">
 <h2>LANGUAGES</h2>
 <ul> 
 <li>English (written & spoken)</li>
