Fix mailto code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <h1>Dylan Dorsey</h1>
-<a href:"mailto:dylan.dorsey@gmail.com"><p id="email">Email: dylan.dorsey@gmail.com</p>
+<a href="mailto:dylandorsey@gmail.com" target="_top">Email: dylan.dorsey@gmail.com</a>
 <p>Phone: 651-271-4785</p>
 <p>City: Minneapolis, MN</p>
 </header>
