Fix fellowship section code

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 <p>Serve as Volunteer Support Coordinator at PRISM, a hub of healing and serving basic needs for participants in basic-needs social services agency</p>
   </div>
   
-<div 
-                     fellowship">
-  
+<div class="contentbody">  
 <h1>FELLOWSHIP</h1>
 <h2>28th CONGRESS-BUNDESTAG YOUTH EXCHANGE (Konstanz, Germany)</h2>
   <h3>Aug. 2011 - July 2012</h3>
