--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Prime Academy Application: Technical Challenge: Resume</title>
 <link rel="stylesheet" type="text/css" href="main.css">
