--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Prime Academy Application: Technical Challenge: Resume</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
