--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 <body>
 <header>
-<h1>Dylan Dorsey</h1>
-<a href="mailto:dylandorsey@gmail.com" target="_top">Email: dylan.dorsey@gmail.com</a>
-<p>Phone: 651-271-4785</p>
-<p>City: Minneapolis, MN</p>
+<p class="name">Dylan Dorsey</p>
+<a class="contact" href="mailto:dylandorsey@gmail.com" target="_top">Email: dylan.dorsey@gmail.com</a>
+<p id="contact">Phone: 651-271-4785</p>
+<p id="contact">Address: 1014 N 17th Ave, Minneapolis, MN 55411</p>
 </header>
                                                      
 <div class="contentbody">
                    <h1>OBJECTIVE</H1>
-                   <p>I seek admission to Prime Digital Academy's Full Stack Engineering program as an entry point to the software development industry.</p>
+                   <p>I seek admission to Prime Digital Academy's Full Stack Engineering program as my entry point to the software development industry.</p>
 </div>
 
 <div class="contentbody">
@@ -28,11 +28,9 @@
 <h2>BIRCHWOOD CAFÉ</h2>
 <h3>Server (Feb. 2016-present)</h3>
 <p>Provide excellent food and beverage service to café guests and parties, prepare recipes, maintain café cleanliness and order</p>
-
 <h2>PRISM</h2>
 <h3>Food shelf Coordinator (July 2015 - Jan. 2016)</h3>
-<p>Coordinate marketplace-style food shelf: develop best practices, manage volunteer crews, procure foods through in-kind donations and purchases, administer ClientTrack database software, support planning and operation of seasonal social services programs</p>
-  
+<p>Coordinate marketplace-style food shelf: develop best practices, manage volunteer crews, procure foods through in-kind donations and purchases, administer ClientTrack database software, support planning and operation of seasonal social services programs</p> 
 <h2>THE BECK GROUP</h2>
 <h3>Project Engineer (Aug. 2013 - Aug. 2014</h3>
 <p>Procure subcontractors and material, review submittals for compliance with contract documents, perform quantity take-off, review billing, coordinate 3D modeling of building systems,  maintain project documents, manage quality control issues</p>
@@ -42,30 +40,24 @@
 <h1>EDUCATION</h1>
 <h2>Code Academy</h2>
 <p>Make a Website (Nov. 2017)</p>
-
 <h2>Iowa State University (Ames, IA)</h2>
 <p>BS Construction Engineering</p>
 <p>GPA: 3.41/4.00</p>
 <p>Graduation: May 2013</p>
-
 <h2>Swansea University (Swansea, Wales)</h2>
 <p>Study abroad (Spring 2009)</p>
-
 </div>
-
 <div class="contentbody">
   <h1>VOLUNTEER EXPERIENCE</h1>
 <h2>AMERICORPS</h2>
 <h3>Sept. 2014 - June 2015)</h3>
 <p>Serve as Volunteer Support Coordinator at PRISM, a hub of healing and serving basic needs for participants in basic-needs social services agency</p>
   </div>
-  
 <div class="contentbody">  
 <h1>FELLOWSHIP</h1>
 <h2>28th CONGRESS-BUNDESTAG YOUTH EXCHANGE (Konstanz, Germany)</h2>
   <h3>Aug. 2011 - July 2012</h3>
 <p>Serve one year in Germany as “ambassador and young professional”  through congressional  fellowship</p>
-
   </div>
 <div class="contentbody">
 <h1>INTERDISCIPLINARY PROJECT</h1>
@@ -73,10 +65,10 @@
   <h3>Oct. 2011 - Jan. 2012</h3>
 <p>Forecast energy use of eco house for international design competition; analyze design changes and update forecast</p>
   </div>
-  
-<div class="contentbody">
-<h2>SOFTWARE SKILL AREAS</h2>
+ <div class="contentbody">
+<h1>SOFTWARE SKILL AREAS</h1>
 <ul>
+<li>HTML & CSS</li>
 <li>Microsoft Office</li>
 <li>Computer Aided Design</li>
 <li>Project Scheduling</li>
@@ -84,7 +76,7 @@
   </div>
  
 <div class="contentbody">
-<h2>LANGUAGES</h2>
+<h1>LANGUAGES</h1>
 <ul> 
 <li>English (written & spoken)</li>
 <li>German (written & spoken></li>
