--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <p class="name">Dylan Dorsey</p>
-<a class="contact" href="mailto:dylandorsey@gmail.com" target="_top">Email: dylan.dorsey@gmail.com</a>
+<a id="contact" href="mailto:dylandorsey@gmail.com" target="_top">Email: dylan.dorsey@gmail.com</a>
 <p id="contact">Phone: 651-271-4785</p>
 <p id="contact">Address: 1014 N 17th Ave, Minneapolis, MN 55411</p>
 </header>
